# Provider_and_Practice_Directory

./: .env.example  .gitignore  LICENSE  Makefile  README.md  SOLUTION_PLAN.md  challenge overview.txt  pyproject.toml
.github/workflows/: ci.yml
dashboard/: app.py
data/: sample_directory.json  taxonomy_crosswalk.csv
data/fixtures/cms/: 1002003006.json  1003004003.json  1234567890.json  1938475609.json
data/fixtures/nppes/: 1003004003.json  1234567890.json  1555666779.json  1938475609.json
data/fixtures/nppes_search/: doe_jane.json
data/fixtures/snapshots/: backtest_cases.json
data/fixtures/web/: HL_001.json  HL_002.json  HL_003.json  HL_004.json  HL_006.json
data/fixtures/web_discovery/: HL_001.json  HL_005.json
docs/: COST_MODEL.md  KAGGLE_WRITEUP.md  PROPOSAL.md  README.md  SOURCE_IDENTIFICATION.md  make_cover.py  make_dashboard_shot.py  make_demo_gif.py  make_diagram.py  make_pdf.py
scripts/: fetch_nppes_snapshots.py
src/directory_pipeline/: __init__.py  audit.py  backtest.py  cli.py  config.py  ingest.py  logging_config.py  matching.py  models.py  normalize.py  pipeline.py  resolve.py  scoring.py  triage.py
src/directory_pipeline/sources/: __init__.py  base.py  census.py  cms.py  nppes.py  web.py  web_discovery.py
tests/: conftest.py  test_backtest.py  test_cli.py  test_live_nppes.py  test_matching.py  test_normalize.py  test_pipeline.py  test_resolve.py  test_scoring.py  test_sources.py  test_triage.py
