[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "provider-directory-pipeline"
version = "0.1.0"
description = "A deterministic-first, cost-efficient pipeline for keeping a healthcare provider & practice directory accurate."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
keywords = ["healthcare", "npi", "nppes", "cms", "data-quality", "entity-resolution", "record-linkage"]
authors = [{ name = "Marc-Dvci" }]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Healthcare Industry",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "pydantic>=2.6",
    "requests>=2.31",
    "phonenumbers>=8.13",
    "python-dateutil>=2.8",
]

[project.optional-dependencies]
# `usaddress` gives best-in-class US address parsing; the pipeline degrades to a
# regex parser if it is not installed, so it is optional rather than required.
address = ["usaddress>=0.5.10"]
# The human-review screen.
dashboard = ["streamlit>=1.30"]
# Confidence-score calibration in the backtest harness.
calibration = ["scikit-learn>=1.3", "numpy>=1.24"]
# Regenerating the submission artifacts under docs/ (diagram, demo GIF, proposal PDF).
docs = ["pillow>=10.0", "markdown>=3.5"]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "mypy>=1.8",
    "types-requests",
    "types-python-dateutil",
]

[project.scripts]
directory-pipeline = "directory_pipeline.cli:main"

[project.urls]
Homepage = "https://github.com/Marc-Dvci/Provider_and_Practice_Directory"
Documentation = "https://github.com/Marc-Dvci/Provider_and_Practice_Directory#readme"
Repository = "https://github.com/Marc-Dvci/Provider_and_Practice_Directory"

[tool.hatch.build.targets.wheel]
packages = ["src/directory_pipeline"]

[tool.hatch.build.targets.sdist]
include = ["src", "data", "tests", "README.md", "SOLUTION_PLAN.md", "LICENSE"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "RUF"]
# RUF001-003: allow intentional math notation (Σ, Π, φ, ρ, §) in docstrings/comments.
ignore = ["B008", "RUF001", "RUF002", "RUF003"]

[tool.ruff.lint.isort]
known-first-party = ["directory_pipeline"]

[tool.mypy]
python_version = "3.10"
plugins = ["pydantic.mypy"]
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
no_implicit_optional = true
ignore_missing_imports = true
files = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# `live` tests hit real government APIs; they are deselected by default so the
# suite stays offline/deterministic. Run them with `pytest -m live`.
addopts = "-q -m 'not live'"
markers = ["live: hits real external APIs (network required); deselected by default"]
filterwarnings = ["error::DeprecationWarning:directory_pipeline.*"]

[tool.coverage.run]
source = ["directory_pipeline"]
branch = true
